--- a/src/components/one.css
+++ b/src/components/one.css
@@ -1321,6 +1321,9 @@ display:none
 .img_1_{
 	border-radius: 5px;
 }
+.bg-color{
+	background-color: #121212;
+}
 .gx-2{
 	--bs-gutter-x: 0.3rem;
 }
@@ -2088,7 +2091,10 @@ cursor: pointer;
 	text-align: center;
   }
 
-
+.width_75{
+	font-size: 10px;
+	width: 75vw;
+}
   .dostav {
     overflow: hidden;
     object-fit: cover;
@@ -2654,7 +2660,8 @@ font-size: 17px;
 	height: 65px;
 }
 .display_Flex {
-    margin-top: 6px;
+	font-size: 12px;
+    margin-top: 9px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2737,7 +2744,7 @@ border-top: 1px solid #eee;
     align-items: center;
 }
 .contain{
-	background-color: #121212;
+	background-color: #121212!important;
 	margin: 7% 10% 10% 10%;
 margin-bottom: 15%;
 }
@@ -3592,7 +3599,10 @@ img {
 
 }
 @media only screen and (max-width: 1170px) {
-
+	.marl {
+		padding-left: 200px;
+		
+	}
 	.container_basket {
 	
 		margin-left: 15px;
@@ -3837,6 +3847,10 @@ img {
 }
 
 @media only screen and (max-width: 520px) {
+	#but_email{
+		padding: 0px 15px 0px 15px;
+		width: 35%;
+	}
 	.promo_inp {
 
 		width: 150px;
@@ -3877,6 +3891,7 @@ img {
   margin-left: 5px;
 	}
 	.display_Flex {
+		font-size: 11.5px;
 		font-size: 12px;
 		margin-top: 9px;
 
